[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/Hud/bogdan_head.png" type="Texture" id=1]
[ext_resource path="res://assets/Hud/bogdan_head_sheet.png" type="Texture" id=2]
[ext_resource path="res://scenes/Hud/AnimatedSprite.gd" type="Script" id=3]
[ext_resource path="res://scenes/Hud/health_bar.gd" type="Script" id=4]
[ext_resource path="res://assets/Hud/speed.png" type="Texture" id=5]
[ext_resource path="res://assets/Hud/damage.png" type="Texture" id=6]
[ext_resource path="res://font/m5x7.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/Hud/fire_rate.png" type="Texture" id=8]
[ext_resource path="res://assets/Hud/range.png" type="Texture" id=9]
[ext_resource path="res://assets/Bullet/shotgunAMMO.png" type="Texture" id=10]
[ext_resource path="res://assets/Key/EvilKey.png" type="Texture" id=11]
[ext_resource path="res://assets/Hud/bogdan_healed.png" type="Texture" id=12]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "hitted",
"speed": 30.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "healed",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 7 )

[node name="health_bar" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 45, 36 )
scale = Vector2( 0.710938, 0.710938 )
frames = SubResource( 7 )
animation = "healed"
frame = 1
script = ExtResource( 3 )

[node name="Speed" type="Label" parent="."]
margin_left = 86.0
margin_top = 209.0
margin_right = 132.0
margin_bottom = 230.0
custom_fonts/font = SubResource( 8 )
text = "100"

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 29.0
margin_top = 191.0
margin_right = 93.0
margin_bottom = 255.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )

[node name="Damage" type="Label" parent="."]
margin_left = 86.0
margin_top = 248.0
margin_right = 132.0
margin_bottom = 269.0
custom_fonts/font = SubResource( 8 )
text = "100"

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 29.0
margin_top = 243.0
margin_right = 93.0
margin_bottom = 293.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )

[node name="FireRate" type="Label" parent="."]
margin_left = 86.0
margin_top = 285.0
margin_right = 132.0
margin_bottom = 306.0
custom_fonts/font = SubResource( 8 )
text = "100"

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = 38.0
margin_top = 282.0
margin_right = 102.0
margin_bottom = 346.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Range" type="Label" parent="."]
margin_left = 85.0
margin_top = 326.0
margin_right = 131.0
margin_bottom = 347.0
custom_fonts/font = SubResource( 8 )
text = "100"

[node name="TextureRect4" type="TextureRect" parent="."]
margin_left = 27.0
margin_top = 319.0
margin_right = 302.0
margin_bottom = 502.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 9 )

[node name="MunitionImage" type="TextureRect" parent="."]
margin_left = 912.0
margin_top = 560.0
margin_right = 944.0
margin_bottom = 592.0
texture = ExtResource( 10 )
expand = true

[node name="Munition" type="Label" parent="."]
margin_left = 952.0
margin_top = 568.0
margin_right = 992.0
margin_bottom = 592.0
custom_fonts/font = SubResource( 9 )
text = "--"

[node name="SkillPoints" type="Label" parent="."]
margin_left = 668.0
margin_top = 22.0
margin_right = 962.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 10 )
text = "Unspend Skill Points - press T"

[node name="Key" type="TextureRect" parent="."]
margin_left = 51.0
margin_top = 108.0
margin_right = 115.0
margin_bottom = 172.0
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 11 )
